[gd_scene load_steps=17 format=3 uid="uid://brbfnl1lm13te"]

[ext_resource type="Script" path="res://Scripts/AI/Enemy.gd" id="1_nc742"]
[ext_resource type="PackedScene" uid="uid://rpq8chx2ox4y" path="res://Prefabs/Items/FireStaff.tscn" id="2_gu8mx"]
[ext_resource type="Texture2D" uid="uid://b06c53ej341pt" path="res://Sprites/Enemies/Wizzard/Wizzard1.png" id="3_s4asu"]
[ext_resource type="Texture2D" uid="uid://b4a1c6g3kqv20" path="res://Sprites/Enemies/Wizzard/Wizzard2.png" id="4_kfqca"]
[ext_resource type="Texture2D" uid="uid://cpvikyje72ogx" path="res://Sprites/Enemies/Wizzard/WizzardDefeated.png" id="4_qaont"]
[ext_resource type="Script" path="res://Scripts/AI/Wizzard/Phase2.gd" id="11_llxs1"]
[ext_resource type="PackedScene" uid="uid://dd1lyhhog3lw4" path="res://Prefabs/Projectiles/FireWall.tscn" id="12_csv5y"]
[ext_resource type="Script" path="res://Scripts/AI/Enemy_Gun.gd" id="13_dfqrr"]
[ext_resource type="PackedScene" uid="uid://bpjnhgx85t0ys" path="res://Prefabs/Projectiles/Fireball.tscn" id="14_fw0f8"]
[ext_resource type="Texture2D" uid="uid://8v2n5x7kgj08" path="res://Sprites/Guns/FireStaff.png" id="15_trpwg"]
[ext_resource type="Script" path="res://Scripts/State_Machine.gd" id="16_px65a"]
[ext_resource type="Script" path="res://Scripts/AI/Wizzard/Phase1.gd" id="17_q0qwe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3738"]
size = Vector2(43, 49)

[sub_resource type="SpriteFrames" id="SpriteFrames_xxnn3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_s4asu")
}, {
"duration": 1.0,
"texture": ExtResource("4_kfqca")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_qaont")
}],
"loop": true,
"name": &"defeated",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_s4asu")
}, {
"duration": 1.0,
"texture": ExtResource("4_kfqca")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2rh5"]
size = Vector2(39, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aq6sb"]
size = Vector2(25, 26)

[node name="Wizzard" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
collision_layer = 3
collision_mask = 19
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_nc742")
enemy_name = "Wizzard"
is_boss = true
dmg_limit = 1
hp = 40
speed = 64
damage = 1
drop = ExtResource("2_gu8mx")
sprite = NodePath("AnimatedSprite2D")
can_flip = true
has_multiple_animations = true
i_time = 0.2
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3.5, -1.5)
shape = SubResource("RectangleShape2D_i3738")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_xxnn3")
autoplay = "default"
frame_progress = 0.128179

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, -1)
shape = SubResource("RectangleShape2D_w2rh5")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)

[node name="Ref" type="Node2D" parent="."]
position = Vector2(55, -2)

[node name="Pivot" type="Node2D" parent="."]

[node name="Gun" type="Node2D" parent="Pivot"]
position = Vector2(55, -2)
script = ExtResource("13_dfqrr")
gun_name = "Wnad"
max_ammo = 10
damage = 1
bullet_velocity = 55
reload_time = 0.1
precision_recover_time = 1.0
fire_rate = 1.1
spray = 0.4
bullet = ExtResource("14_fw0f8")
target_point = Array[Vector2]([Vector2(26, -6)])
rotation_delay = 2.0

[node name="Sprite2D" type="Sprite2D" parent="Pivot/Gun"]
scale = Vector2(2, 2)
texture = ExtResource("15_trpwg")

[node name="Marker2D" type="Marker2D" parent="Pivot/Gun"]
position = Vector2(15, -5)

[node name="Target" type="Marker2D" parent="Pivot/Gun"]
position = Vector2(17, -5)

[node name="Timer" type="Timer" parent="Pivot/Gun"]

[node name="Fire Rate Timer" type="Timer" parent="Pivot/Gun"]
wait_time = 0.1

[node name="Area2D" type="Area2D" parent="Pivot/Gun"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Gun/Area2D"]
position = Vector2(-16.5, 2)
shape = SubResource("RectangleShape2D_aq6sb")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("16_px65a")
initial_state = NodePath("Phase1")

[node name="Phase1" type="Node" parent="State Machine"]
script = ExtResource("17_q0qwe")

[node name="Timer" type="Timer" parent="State Machine/Phase1"]

[node name="RepositionTimer" type="Timer" parent="State Machine/Phase1"]
wait_time = 10.0

[node name="ReposOpeningTimer" type="Timer" parent="State Machine/Phase1"]
wait_time = 3.0
one_shot = true

[node name="Phase2" type="Node" parent="State Machine"]
script = ExtResource("11_llxs1")
wall = ExtResource("12_csv5y")

[node name="InitTimer" type="Timer" parent="State Machine/Phase2"]

[node name="WallSpawnTimer" type="Timer" parent="State Machine/Phase2"]
autostart = true

[node name="OpeningTimer" type="Timer" parent="State Machine/Phase2"]
wait_time = 5.0
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 48.0

[connection signal="timeout" from="Pivot/Gun/Timer" to="Pivot/Gun" method="_on_timer_timeout"]
[connection signal="timeout" from="Pivot/Gun/Fire Rate Timer" to="Pivot/Gun" method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="State Machine/Phase1/Timer" to="State Machine/Phase1" method="_on_timer_timeout"]
[connection signal="timeout" from="State Machine/Phase1/RepositionTimer" to="State Machine/Phase1" method="_on_reposition_timer_timeout"]
[connection signal="timeout" from="State Machine/Phase1/ReposOpeningTimer" to="State Machine/Phase1" method="_on_repos_opening_timer_timeout"]
[connection signal="timeout" from="State Machine/Phase2/InitTimer" to="State Machine/Phase2" method="_on_init_timer_timeout"]
[connection signal="timeout" from="State Machine/Phase2/WallSpawnTimer" to="State Machine/Phase2" method="_on_wall_spawn_timer_timeout"]
[connection signal="timeout" from="State Machine/Phase2/OpeningTimer" to="State Machine/Phase2" method="_on_opening_timer_timeout"]
